--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1 style="font-size:50px;background-color:lightgray; text-align:center">Школа бойових мистецтв<br/>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Virginia_class_submarine.jpg/800px-Virginia_class_submarine.jpg" height="50"/></h1>
         <p style="font-size:20px">Запрошуємо освоїти будь-який з видів рукопашного бою, який вам до вподоби. <br/>У нас представлені: <b><i>традиційний рукопашний бій, тайський бокс, Джиу-джитсу, карате та багато іншого</i></b>. Заняття ведуть професійні тренери у групах різного рівня.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Virginia_class_submarine.jpg/800px-Virginia_class_submarine.jpg" height="230px";/><img src="/uploads/2020/10/boxing-ring_0_1602525156.png" height="230px";/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Virginia_class_submarine.jpg/800px-Virginia_class_submarine.jpg" height="230px";/><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Virginia_class_submarine.jpg/800px-Virginia_class_submarine.jpg" height="230px";/>
     </main>
     <footer style="background-color:black;color:white;">
         <p style="font-size:15px"> Адреса: місто Спортивне, вул. 15.</p>
